--- a/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET.csproj
+++ b/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET.csproj
@@ -72,6 +72,7 @@
     <None Include="code.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
