--- a/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET2.0.csproj
+++ b/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET2.0.csproj
@@ -67,7 +67,7 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="code.json" />
-    <None Include="packages.config" />
+    <None Include="packages20.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
