Added RecordController unit test .
Added CloudXNS api2.0 docments.
Fixed RecordController bugs.

--- a/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET2.0.csproj
+++ b/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET2.0.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CloudXNSAPI.cs" />
+    <Compile Include="APIManager.cs" />
     <Compile Include="Controller\ConfigurationController.cs" />
     <Compile Include="Controller\DomainController.cs" />
     <Compile Include="Controller\DynamicContractResolver.cs" />
