--- a/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET.csproj
+++ b/CloudXNS-API-SDK-dotNET/CloudXNS-API-SDK-dotNET.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CloudXNSAPI.cs" />
+    <Compile Include="APIManager.cs" />
     <Compile Include="Controller\ConfigurationController.cs" />
     <Compile Include="Controller\DomainController.cs" />
     <Compile Include="Controller\DynamicContractResolver.cs" />
